--- a/tools/serpent-gen/Makefile
+++ b/tools/serpent-gen/Makefile
@@ -15,3 +15,9 @@ serpent_bits.o: serpent_bits.c serpent_bits.h
 
 clean:
 	rm -f brute.o serpent_bits.o brute
+
+test: test.o serpent_bits.o
+	g++ test.o serpent_bits.o -o test
+
+test.o: test.cpp serpent_bits.h serpent_sboxes.hpp
+	g++ -Wall -std=c++98 test.cpp -c
