Task-level parallelized
Now using task-level parallelism to search more exhaustively for good
bit-spliced sboxes.  It isn't completely exhaustive because that is yet
more insane.

(maybe there's a way to do it exhaustively that's okay... forall y_i,
find all minimal sequences that achieve y_i.  Then choose one sequence
for each y_i such that the union of these four sequences is minimized.
I will have to think on this more...)

--- a/tools/serpent-gen/Makefile
+++ b/tools/serpent-gen/Makefile
@@ -1,17 +1,21 @@
-CFLAGS = -Wall -pipe -std=c99 -pedantic
+CFLAGS = -Wall -pipe -std=c99 -pedantic -pthread
 CFLAGS += -O3
-#CFLAGS += -O0 -g
+#CFLAGS += -O0 -g 
+LDFLAGS = -pthread
 
 all: brute
 
-brute: brute.o serpent_bits.o
-	$(CC) brute.o serpent_bits.o -o brute
+brute: brute.o serpent_bits.o thread_list.o
+	$(CC) brute.o serpent_bits.o thread_list.o $(LDFLAGS) -o brute
 
-brute.o: brute.c serpent_bits.h
+brute.o: brute.c serpent_bits.h thread_list.h
 	$(CC) $(CFLAGS) brute.c -c
 
 serpent_bits.o: serpent_bits.c serpent_bits.h
 	$(CC) $(CFLAGS) serpent_bits.c -c
 
+thread_list.o: thread_list.c thread_list.h
+	$(CC) $(CFLAGS) thread_list.c -c
+
 clean:
-	rm -f brute.o serpent_bits.o brute
+	rm -f brute.o serpent_bits.o thread_list.o brute
