Preliminary CMake builds.
Right now it's a dynamically-linked binary.
`make doc` replaced with ./gen_docs.sh since CMake needs the Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 .sw[op]
 .*.sw[op]
+/Doxyfile
+/html
+
+# bjam
 /bin
 /debug
 /release
-/Doxyfile
-/html
+
+# cmake
+/CMakeCache.txt
+/CMakeFiles
+/Makefile
+/cmake_install.cmake
+/fluks
