Add message for libse{linux,pol} not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,11 +44,13 @@ message(STATUS "Device Mapper libdevmapper found")
 find_library(SE_libselinux selinux DOC "SE libselinux")
 find_library(SE_libsepol sepol DOC "SE libsepol")
 if (${SE_libselinux} STREQUAL "SE_libselinux-NOTFOUND")
+	message(STATUS "libselinux not found")
 	set(SE_libselinux "")
 else()
 	message(STATUS "libselinux found")
 endif()
 if (${SE_libsepol} STREQUAL "SE_libsepol-NOTFOUND")
+	message(STATUS "libsepol not found")
 	set(SE_libsepol "")
 else()
 	message(STATUS "libsepol found")
