--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(Boost_USE_MULTITHREADED TRUE)
 if(static_linking)
 	set(Boost_USE_STATIC_RUNTIME TRUE)
 endif()
-find_package(Boost 1.35 COMPONENTS filesystem program_options system)
+find_package(Boost 1.35 COMPONENTS program_options system)
 
 if (static_linking)
 	set(OPENSSL_USE_STATIC_LIBS TRUE)
@@ -92,10 +92,10 @@ if(big_endian STREQUAL 1)
 else()
 	add_definitions(-DFLUKS_IS_BIG_ENDIAN=0)
 endif()
-set(CMAKE_C_FLAGS         "${CMAKE_C_FLAGS} -Wall -pedantic")
+set(CMAKE_C_FLAGS         "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic")
 set(CMAKE_C_FLAGS_DEBUG   "-O0 -g -DDEBUG")
 set(CMAKE_C_FLAGS_RELEASE "-DNDEBUG")
-set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -pedantic")
+set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -pedantic")
 set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG")
 
