Remove libboost-system also!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(Boost_USE_MULTITHREADED TRUE)
 if(static_linking)
 	set(Boost_USE_STATIC_RUNTIME TRUE)
 endif()
-find_package(Boost 1.35 COMPONENTS program_options system)
+find_package(Boost 1.35 COMPONENTS program_options)
 
 if (static_linking)
 	set(OPENSSL_USE_STATIC_LIBS TRUE)
@@ -171,9 +171,9 @@ target_link_libraries(test-twofish)
 add_test(NAME test-twofish COMMAND test-twofish WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/test)
 
 add_executable(test-tiger test/tiger.cpp tiger.c)
-target_link_libraries(test-tiger boost_system)
+target_link_libraries(test-tiger)
 add_test(NAME test-tiger COMMAND test-tiger)
 
 add_executable(test-whirlpool test/whirlpool.cpp whirlpool.c)
-target_link_libraries(test-whirlpool boost_system)
+target_link_libraries(test-whirlpool)
 add_test(NAME test-whirlpool COMMAND test-whirlpool)
